# cancer_seg_comp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebooks/: EDA.ipynb  results_analysis.ipynb  viz.ipynb
scripts/: run.py
scripts/stages/: create_datasets.py  evaluation_yolosam.py  evaluation_yoloseg.py  inference_testdf_det.py  inference_testdf_seg_sam.py  inference_testdf_yoloseg.py  time_experiment.py  train_yolo_det.py  train_yolo_seg.py
src/data_handling/: bbox.py  brain_data.py  breast_data.py  data_augmentator.py  data_handler.py
src/evaluation/: evaluator.py
src/settings/: settings.py
src/solutions/: yolosam.py
src/techniques/classification/: classif_model.py  yolo.py
src/techniques/detection/: FRCNN.py  yolo.py
src/techniques/segmentation/: sam.py  yolo_seg.py
src/tools/: tools.py
